--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -31,6 +31,7 @@ qrcode = "0.14"
 windows = { version = "0.58", features = ["Win32_Graphics_Printing", "Win32_Foundation", "Win32_System_Com", "Win32_System_LibraryLoader"] }
 log = "0.4"
 env_logger = "0.11"
+tauri-plugin-log = "2"
 tauri-plugin-updater = "2.10.0"
 tauri-plugin-process = "2.3.1"
 
