--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "tauri:build": "tauri build",
+    "tauri:build:debug": "tauri build --debug",
+    "release": "npm run build && npm run tauri:build"
   },
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
