add config pass though printer

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "tauri": "tauri",
     "tauri:build": "tauri build",
     "tauri:build:debug": "tauri build --debug",
+    "build:only": "npm run build && tauri build -- --no-bundle",
+    "build:app": "npm run build && npm run tauri:build",
+    "run:release": "node scripts/run-release.js",
     "release": "npm run build && npm run tauri:build"
   },
   "dependencies": {
