add run for mackbook

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "tauri": "tauri",
-    "tauri:build": "tauri build",
+    "tauri": "node scripts/ensure-ffmpeg-resource.js && tauri",
+    "tauri:build": "node scripts/ensure-ffmpeg-resource.js && tauri build",
     "tauri:build:debug": "tauri build --debug",
     "build:only": "npm run build && tauri build -- --no-bundle",
     "build:app": "npm run build && npm run tauri:build",
@@ -31,6 +31,9 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.13.0",
     "recordrtc": "^5.6.2"
+  },
+  "optionalDependencies": {
+    "@ffmpeg-installer/win32-x64": "^4.1.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
